--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ trim_trailing_whitespace = false
 [*.{yml,yaml}]
 indent_size = 2
 
-[Makefile]
+[{Makefile,Makefile.**}]
 indent_style = tab
 
 [**.rb]
