--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,8 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: detect-aws-credentials
+        args:
+          - '--allow-missing-credentials'
   - repo: git://github.com/antonbabenko/pre-commit-terraform
     rev: v1.45.0
     hooks:
