--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,3 +32,5 @@ jobs:
 
       - name: Terraform security scan
         uses: triat/terraform-security-scan@v2.0.2
+        with:
+          tfsec_version: v0.36.12
