--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,8 @@ jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: 'eu-central-1'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
