--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,6 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-11 ]
         tfversions: [ 0.13.7, 1.0.11, 1.1.0 ]
-        modules: [ cloudtrail, config, config-rule, ebs-default-encryption, iam-access-analyzer, iam-password-policy, iam-userselfservice, secure-s3-bucket, security-hub ]
     runs-on: ${{ matrix.os }}
 
     env:
@@ -30,9 +29,24 @@ jobs:
         id: fmt
         run: terraform fmt -check -recursive
 
-      - name: Terraform Validate modules/${{ matrix.modules }}
-        id: validate-${{ matrix.modules }}
-        working-directory: modules/${{ matrix.modules }}
+      - name: Terraform Validate modules/secure-s3-bucket
+        id: validate-secure-s3-bucket
+        working-directory: modules/secure-s3-bucket
         run: |
           terraform init -backend=false
           terraform validate
+
+      - name: Terraform Validate modules/security-hub
+        id: validate-security-hub
+        working-directory: modules/security-hub
+        run: |
+          terraform init -backend=false
+          terraform validate
+
+      - name: Terraform Validate modules/cloudtrail
+        id: validate-cloudtrail
+        working-directory: modules/cloudtrail
+        run: |
+          terraform init -backend=false
+          terraform validate
+
