--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-11 ]
-        tfversions: [ 0.13.7, 1.0.11, 1.1.0 ]
+        tfversions: [ 0.13.7, 1.0.11, 1.1.0 , 1.2.5]
     runs-on: ${{ matrix.os }}
 
     env:
